--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.17.0"
+    "express": "^4.17.0",
+    "pm2": "^3.5.0"
   },
   "devDependencies": {},
   "scripts": {
