circleCI push to heroku

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,3 +11,6 @@ jobs:
             - run:
                 name: tests
                 command: npm test
+            - run:
+                name: Deploy Master to Heroku
+                command: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
