--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "dotenv": "^8.0.0",
+    "ejs": "^2.6.1",
     "express": "^4.17.0",
-    "pm2": "^3.5.0"
+    "express-session": "^1.16.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "pm2": "^3.5.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   },
   "devDependencies": {
     "jest": "^24.8.0",
